--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h2.title span{
     color: #00FF08;
 }
 
-button:hover{
+button:hover, form .btn-enviar input:hover{
     box-shadow: 0px 0px 8px #00ff08;
     transform: scale(1.05);
     }
@@ -66,7 +66,7 @@ header a{
     transition: .2s;
 }
 
-header a:hover{
+header nav.menu-desktop a:hover{
     color: #fff;
     transform: scale(1.05);
 }
@@ -75,9 +75,73 @@ header nav ul {
     list-style-type: none;
 }
 
-header nav ul li{
+header nav.menu-desktop ul li{
     display: inline-block;
     padding: 0 40px;
+}
+
+/*STYLE HEADER MENU-MOBILE*/
+
+.btn-open-menu{
+    color: #00FF08;
+    font-size: 40px;
+}
+
+.menu-mobile{
+    background-color: #000;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.menu-mobile.menu-open{
+    width: 70%;
+}
+
+.menu-mobile.btn-open-menu ~ .background-menu-overlay{
+    display: block;
+}
+
+.menu-mobile .btn-close{
+    padding: 20px 5%;
+}
+
+.menu-mobile .btn-close i{
+    color: #00FF08;
+    font-size: 30px;
+}
+
+.menu-mobile nav ul{
+    text-align: right;
+}
+
+.menu-mobile nav ul li a{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    padding: 20px 8%;
+    display: block;
+}
+
+.menu-mobile nav ul li a:hover{
+    background-color: #00FF08;
+    color: #000;
+}
+
+.background-menu-overlay{
+    background-color: #00FF08;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 88888;
+    display: none;
 }
 
 
@@ -185,7 +249,7 @@ section.about .flex{
     text-align: justify;
 }
 
-.about .txt-about .btn-social button{
+.btn-social button{
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -197,4 +261,216 @@ section.about .flex{
     transition: .2s;
 }
 
+/*STYLE PORTEFOLIO*/
 
+section.portefolio{
+    padding: 80px 4%;
+    box-shadow: 0 0 40px 10px #ffffff1d;
+}
+
+section.portefolio .flex{
+    justify-content: space-around;
+    margin-top: 60px;
+}
+
+.img-port{
+    width: 360px;
+    height: 400px;
+    background-size: cover;
+    background-position: 100% 0%;
+    transition: 8s;
+    cursor: pointer;
+    border-radius: 40px;
+    position: relative;
+}
+
+.img-port:hover{
+    background-position: 100% 100%;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000b8;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 600;
+    color: #fff;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.overlay:hover{
+    opacity: 1;
+}
+
+/*STYLE FORM*/
+
+section.form{
+    padding: 80px 4%;
+}
+
+form{
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 40px;
+}
+
+form input, form textarea{
+    width: 100%;
+    background-color: #242424;
+    border: 0;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 15px;
+    color: #fff;
+    font-size: 18px;
+}
+
+form textarea{
+    resize: none;
+    height: 200px;
+    max-height: 200px;
+
+}
+
+form .btn-enviar{
+    margin-top: 20px;
+    text-align: center;
+}
+
+form .btn-enviar input{
+    width: 120px;
+    background-color: #00FF08;
+    color: #000;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .2s;
+}
+
+/*STYLE FOOTER*/
+
+footer{
+    padding: 40px 4%;
+    box-shadow: 0 0 40px 10px #ffffff1d;
+}
+
+footer .flex{
+    justify-content: space-between;
+}
+
+footer .line-footer{
+    padding: 20px 0;
+}
+
+.border{
+    border-top: 2px solid #00FF08;
+}
+
+footer .line-footer p i{
+    color: #00FF08;
+    font-size: 22px;
+    padding-right: 5px;
+}
+
+footer .line-footer p a{
+    color: #fff;
+}
+
+@media screen and (max-width: 1020px){
+    /*GENERAL*/
+
+    .flex{
+        flex-direction: column-reverse;
+    }
+
+    h2.title{
+        font-size: 34px;
+        line-height: 30px;
+    }
+
+    /*HEADER*/
+    .menu-desktop, .btn-contact{
+        display: none;
+    }
+
+    /*HEADER TOP*/
+
+    section.top-site .flex{
+        gap: 40px;
+    }
+
+    section.top-site{
+        padding: 20px 8%;
+    }
+
+    .top-site h1{
+        font-size: 30px;
+    }
+
+    .top-site .img-top-site img{
+        width: 100%;
+    }
+
+    /*SPECIALITIES*/
+
+    section.specialities{
+        padding: 40px 8%;
+    }
+
+    /*ABOUT*/
+
+    section.about{
+        padding: 80px 8%;
+    }
+
+    .about .txt-about h2{
+        font-size: 34px;
+        line-height: 35px;
+        text-align: center;
+    }
+
+    .btn-social{
+        text-align: center;
+    }
+    .img-about img{
+        width: 100%;
+    }
+
+    /*PORTEFOLIO*/
+
+    section.portefolio{
+        padding: 80px 8%;
+    }
+
+    .img-port{
+        width: 100%;
+        max-width: 360px;
+        margin: 0 auto;
+    }
+
+    section.portefolio .flex{
+        gap: 60px;
+    }
+
+    /*FOOTER*/
+
+    footer .flex{
+        flex-direction: column;
+    }
+
+    footer .line-footer{
+        text-align: center;
+    }
+
+}
