add pages to SPA

--- a/style.css
+++ b/style.css
@@ -229,17 +229,21 @@ section.portefolio{
 section.portefolio .flex{
     justify-content: space-around;
     margin-top: 60px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .img-port{
-    width: 360px;
+    width: calc(33.33% - 40px);
     height: 400px;
     background-size: cover;
     background-position: 100% 0%;
     transition: 8s;
     cursor: pointer;
     border-radius: 40px;
+    margin-bottom: 40px;
     position: relative;
+    box-sizing: border-box;
 }
 
 .img-port:hover{
@@ -327,12 +331,12 @@ footer .flex{
     justify-content: space-between;
 }
 
-footer .line-footer{
-    padding: 20px 0;
+footer .flex img{
+    margin-bottom: 10px;
 }
 
 .border{
-    border-top: 2px solid #00FF08;
+    border-top: 1px solid #00FF08;
 }
 
 footer .line-footer p i{
@@ -341,9 +345,6 @@ footer .line-footer p i{
     padding-right: 5px;
 }
 
-footer .line-footer p a{
-    color: #fff;
-}
 
 @media screen and (max-width: 1020px){
     /*GENERAL*/
